hphp/hack/test/typecheck/asyncgen5.php.exp
File "asyncgen5.php", line 8, characters 3-23:
Invalid yield (Typing[4110])
File "asyncgen5.php", line 7, characters 15-47:
This is an object of type AsyncGenerator
File "asyncgen5.php", line 8, characters 3-23:
It is incompatible with an object of type Generator (result of function with 'yield' in the body)
